# basic-web-rs

./: Cargo.toml
migrations/: 20230113212358_create_foods_table.sql
src/: context.rs  main.rs  webapp.rs
src/api/: mod.rs
src/db/: interface.rs  sqlite.rs
src/gtypes/: config.rs  food.rs
src/lib/: context.rs  lib.rs  webapp.rs
src/lib/api/: error.rs  food.rs  mod.rs
src/lib/auth/: oauth2.rs
src/lib/db/: error.rs  interface.rs  mod.rs  postgres.rs  sqlite.rs
src/lib/frontend/: index.rs
src/lib/gtypes/: config.rs  food.rs  mod.rs
src/lib/types/: config.rs  food.rs  mod.rs
templates/: base.html  index.html
tests/: db_test.rs  mod.rs  web_test.rs
tests/api/: mod.rs
tests/common/: mod.rs  test_context.rs
tests/db/: mod.rs
tests/frontend/: mod.rs
tests/web/: mod.rs
