[package]
name = "goutdb"
version = "0.1.0"
edition = "2021"

[lib]
name = "libgout"
path = "src/lib/lib.rs"

[[bin]]
name = "goutdb"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = [ "full" ] }
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls", "sqlite" ] }
axum = "0.6.2"
env_logger = "0.10.0"
chrono = "0.4.23"
uuid = { version = "1.2.2", features = ["v4"] }
thiserror = "1.0.38"
async-trait = "0.1.61"
derive_more = "0.99.17"
rand = "0.8.5"
serde =  { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
hyper = "0.14.23"

[dev-dependencies]
anyhow = "1.0"
