[package]
name = "basicweb"
version = "0.1.0"
edition = "2021"

[lib]
name = "libbasicweb"
path = "src/lib/lib.rs"

[[bin]]
name = "basicweb"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = [ "full" ] }
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "sqlite", "postgres"] }
axum = "0.6.2"
env_logger = "0.10.0"
chrono = "0.4.23"
uuid = { version = "1.2.2", features = ["v4"] }
thiserror = "1.0.38"
async-trait = "0.1.61"
derive_more = "0.99.17"
rand = "0.8.5"
serde =  { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
hyper = "0.14.23"
log = "0.4.17"
oauth2 = { version = "4.3.0", features = ["native-tls", "reqwest"]}
url = "2.3.1"
askama = { version = "0.12.0", features = ["with-axum"] }
askama_axum = "0.3.0"

[dev-dependencies]
anyhow = "1.0"
reqwest = { version = "0.11.13", default-features = false, features = ["json"]}
